--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">RecyclerView</string>
+    <string name="a_remarkable_rebound_this_weekend_has_put_bitcoin_back_en_route_to">A remarkable rebound this weekend has put Bitcoin back en route to</string>
 </resources>
